2005-11-01  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-redist-full-contents) Convert defvar to
	defcustom.
	(mh-smail, mh-extract-rejected-mail, mh-forward, mh-redistribute)
	(mh-reply, mh-send, mh-send-other-window)
	(mh-fill-paragraph-function): Sync docstrings with manual.
	(mh-edit-again, mh-extract-rejected-mail, mh-redistribute): Rename
	msg argument to message (to make for a better docstring).

	* mh-customize.el (mh-redist-full-contents-flag): Convert defvar
	to defcustom. Rename by adding -flag.
	(mh-compose-forward-as-mime-flag)
	(mh-compose-letter-function, mh-forward-subject-format)
	(mh-insert-x-mailer-flag, mh-reply-default-reply-to)
	(mh-reply-show-message-flag, mh-letter-mode-hook): Sync docstrings
	with manual.

	* mh-print.el (mh-ps-spool-buffer, mh-ps-spool-a-msg) 
	(mh-ps-print-msg): Remove debugging messages.
	(mh-ps-print-msg-show, mh-ps-print-msg-show) 
	(mh-ps-print-toggle-color, mh-ps-print-toggle-mime): Remove period
	after message per conventions.

2005-10-30  Bill Wohler  <wohler@newt.com>

	* mh-e.el (mh-scan-good-msg-regexp, mh-scan-deleted-msg-regexp) 
	(mh-scan-refiled-msg-regexp, mh-scan-cur-msg-number-regexp): Sync
	docstrings with manual.

	* mh-customize.el (mh-compose-space-does-completion-flag)
	(mh-signature-separator-flag, mh-interpret-number-as-range-flag)
	(mh-adaptive-cmd-note-flag): Use "Non-nil means" instead of "On
	means" to remain checkdoc clean and consistent with Emacs. I
	raised this issue with the Emacs developers and Stallman agrees
	that "On means" should be allowed in custom docstrings but that
	this change requires thought and should wait until after the Emacs
	22 release.

2005-10-28  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-annotate-msg): Use new variable
	mh-scan-field-destination-offset rather than hard-coding 1.

	* mh-customize.el (mh-interpret-number-as-range-flag): Add * to
	docstring.
	(mh-adaptive-cmd-note-flag-check, mh-scan-format-file-check): New